modified test cases
